//
//  AccessibilityIdentifier.swift
//  Bayut-Assignment
//
//  Created by Ali Abdul Jabbar on 14/11/2021.
//

import Foundation

public struct AccessibilityIdentifier {
    static let classifiedDetailsView = "AccessibilityIdentifierClassifiedDetailsView"
    static let searchField = "AccessibilityIdentifierSearchClassified"
}

